# cpp-programs

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README-01.md  README.md  array-2d.cpp  array-using-smart-ptr.cpp  auto_tasks.sh  configure.ac  cscope-db-gen.sh  fork-exec.cpp  gcov-env.cc  py_rename_files.py  setuid-by-name.cpp  string-search-replace.cpp  t.cpp  thread-setname.c  vtable.cpp
Applications/: CMakeLists.txt
Applications/CorrectTheSpelling/: CMakeLists.txt  main.cpp
Applications/CorrectTheSpelling/doc/: CorrectTheSpelling.doxyfile
Applications/CorrectTheSpelling/inc/: AspellChecker.h  CorrectSpell.h  ISpellChecker.h  SpellCheckerFactory.h  correct_spell.h
Applications/CorrectTheSpelling/src/: AspellChecker.cpp  CorrectSpell.cpp  SpellCheckerFactory.cpp
Applications/CorrectTheSpelling/test/: test_CorrectSpell.cpp  test_main.cpp  test_precomp.h
Applications/ImageProcessing/: CMakeLists.txt
Applications/ImageProcessing/inc/: cimagegenerator.h
Applications/ImageProcessing/src/: cimagegenerator.cpp
Applications/SkewCorrection/: CMakeLists.txt  main.cpp
Apps/ImageProc/: CMakeLists.txt  main.cpp
Apps/ImageProc/inc/: cimagegenerator.h  cjpegdecoder.h  jpegcommondefs.h
Apps/ImageProc/src/: cimagegenerator.cpp  cjpegdecoder.cpp
CodeCoverage/: CMakeLists.txt  main.cc
CodeCoverage/inc/: learn_gcov_func.hh
CodeCoverage/src/: learn_gcov_func.cc
DesignPatterns/: CMakeLists.txt  Makefile.am
DesignPatterns/Builder/: CMakeLists.txt  Makefile.am  main.cpp
DesignPatterns/Builder/inc/: carbuilder.h  cburgerbuilder.h  cxmlbuilder.h  cxmldombuilder.h
DesignPatterns/Builder/src/: carbuilder.cpp  cburgerbuilder.cpp  cxmlbuilder.cpp  cxmldombuilder.cpp
DesignPatterns/Builder/test/: cxmlbuilder_test.cpp  test_carbuilder.cpp  test_main.cpp  test_precomp.h
DesignPatterns/Composite/: CMakeLists.txt  Makefile.am  main.cpp
DesignPatterns/Composite/inc/: cgraphic.h  corganization.h
DesignPatterns/Composite/src/: cgraphic.cpp  corganization.cpp
DesignPatterns/Composite/test/: corganization_test.cpp  test_cgraphic.cpp  test_precomp.h
Experiments/: CMakeLists.txt
Experiments/inc/: competitiveprograms.h  lpdfcommon.h  lpdflogger.h  pdf_dictionary.h  pdf_object.h
Experiments/src/: lpdf_func.cpp  pdf_dictionary.cpp
Exps/: main.cpp
Exps/inc/: debug_macros.h  lpdfcommon.h  pdf_dictionary.h  pdf_object.h  pdf_precomp.h
Exps/src/: competitiveprograms.cpp  lpdf_func.cpp  pdf_dictionary.cpp  pdf_object.cpp
FunStuff/CorrectTheSpelling/: CMakeLists.txt
FunStuff/CorrectTheSpelling/src/: correct_spell.cpp
LearnCpp/: CMakeLists.txt
LearnCpp/LearnCppConcepts/: CMakeLists.txt
LearnCpp/LearnCppConcepts/inc/: runtimebehaviour.h  stringproblems.h
LearnCpp/LearnCppConcepts/src/: auto-enums.cpp  lamda-exps.cpp  stringproblems.cpp  threads_cpp11.cpp
LearnCpp/LearnCppConcepts/test/: test_stringproblems.cpp
LearnCpp/LearnGTestAndGMock/: CMakeLists.txt  main.cpp
LearnCpp/LearnGTestAndGMock/inc/: consumer.h  producer.h
LearnCpp/LearnGTestAndGMock/src/: consumer.cpp  producer.cpp
LearnCpp/LearnGTestAndGMock/test/: test_producer.cpp
LearnCpp/LearnGcov/: main.cpp
LearnCpp/LearnGcov/inc/: learn_gcov_func.h
LearnOpenCV/: opencv_python_compile_cmake_cmd.txt
LearnOpenCV/ModifiedSamples/: CMakeLists.txt  README.md  cv4_hog_svm_success_log.txt  main.cpp
LearnOpenCV/ModifiedSamples/inc/: example_cpp_train_HOG.h  example_videocapture_basic.h  logger.h
LearnOpenCV/ModifiedSamples/src/: example_cpp_train_HOG.cpp  example_videocapture_basic.cpp
LearnStuff/: CMakeLists.txt
LearnStuff/LearnCppConcepts/: CMakeLists.txt  main.cpp
LearnStuff/LearnCppConcepts/inc/: runtimebehaviour.h  stringproblems.h  threads_cpp11.h
LearnStuff/LearnCppConcepts/src/: runtimebehaviour.cpp  stringproblems.cpp
LearnStuff/LearnGTestAndGMock/: CMakeLists.txt
LearnStuff/LearnGTestAndGMock/test/: test_main.cpp  test_precomp.h  test_producer.cpp
LearnStuff/LearnGcov/doc/: learn_variadic_func_ptr_n_macro.txt
LearnStuff/LearnGcov/src/: learn_gcov.cpp
OpenCV_Stuff/: CMakeLists.txt
OpenCV_Stuff/inc/: cskewcorrector.h
OpenCV_Stuff/src/: cskewcorrector.cpp
OpenCV_Stuff/test/: test_cskewcorrector.cpp
StructuredData/: CMakeLists.txt
StructuredData/inc/: ParseWritePidfData.hh
StructuredData/src/: ParseWritePidfData.cc
StructuredData/test/: test_ParseWritePidfData.cc
UnitTesting/: CMakeLists.txt
UnitTesting/inc/: consumer.hh  producer.hh
UnitTesting/src/: consumer.cc  producer.cc
UnitTesting/test/: test_main.cc  test_precomp.hh  test_producer.cc
ext/: Makefile.am  README.md  configure.ac
ext/lib/: Makefile.am
ext/lib/googletest/: Makefile.am  README.md  configure.ac
ext/lib/googletest/googlemock/: Makefile.am
ext/lib/googletest/googletest/: Makefile.am
samples/: CMakeLists.txt
samples/src/: Makefile_a  array-using-smart-ptr.cpp  extend-std-containers.cpp  linux_fork_exec.cpp  linux_gcov_env.cpp  setuid_by_name.cpp  sort-vector-of-vector.cpp  threads-odd-even-seq-using-lamda.cpp  threads-odd-even-seq-using-predicate.cpp  void-func-param.cpp
scripts/: gen_cscope_db.sh  gen_ctags_db.sh  gen_gtags_db.sh  gen_proj_src_file_list.sh  run_tests.py
threads/: CMakeLists.txt  Makefile_a  main.cpp
threads/inc/: threads_cpp11.h
threads/src/: threads_cpp11.cpp
threads/test/: test_main.cpp
vtable/: main.cpp
vtable/inc/: vtable.h
vtable/src/: vtable.cpp
